you do not want by unchecking them. You can also set the cover priority.
Covers from sources that have a higher (smaller) priority will be preferred
when bulk downloading metadata.". Could I have lrpid to differenciate
different volumes of a same book??

ouch... bad surprise, noosfere find so many match to "G.-J. Arnaud"... even
with 'exact' match...I need to find a better way to filter the author list
provided... done: use from difflib import SequenceMatcher and swapping first
and last name before comparison

lrpid is nice for a unique id produced with time, but I guess I could use
the book or the voluem url as an id... (and maybe give a less self pointing
name to the id name)... I use both the book and the volume noosfere's
identifier (bk$<book-number-in-noosfere>$vl$<vol-number-in-noosfere>). With
that info, I can reach immediately to the book and/or to the volume, and
each volume gets a unique nsfr_id

Introduced (via calibre Options) a boolean to expand or not the publisher
field. Now, publisher contains publisher§collection name€serial code. § and €
used because very low probability to exist. Metadata bulk edit created to
help push the data to the right place.

Introduced (via calibre Options) a number to select the debug level

Introduced (via calibre Options) a choice to select how to push the priority
to get oldest or latest with or without preference over volume with ISBN.
Caution, this still choose the most verbose comments.

Introduced (via calibre Options) a string box. Filled with the (exact!!)
publisher name, it pushes priority to give a match on publisher name... Yes,
I know that the collection may still be wrong. The only way is to change the
nsfr_id to reflect what volume of the book we really want (the number,
including the sign if any, after the equal sign should show up glued to the
vl$<number>) and restart the metadata download.

Pushed to version 0,7,0 after refactoring some code to become function instead
of method...